# Projet6-OPC-ML-Conso-Bat

./: README.md  analyse_features.ipynb  building_features.csv  ml_testing.ipynb  pyproject.toml
appli/: service.py
